--- a/Zdk/Server/Zdk.Server.csproj
+++ b/Zdk/Server/Zdk.Server.csproj
@@ -8,32 +8,41 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities.authentication\1.0.0\contentFiles\any\net6.0\BrowserDebugHost.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities.authentication\1.0.0\contentFiles\any\net6.0\BrowserDebugHost.runtimeconfig.json" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities.authentication\1.0.0\contentFiles\any\net6.0\BrowserDebugProxy.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities.authentication\1.0.0\contentFiles\any\net6.0\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities.authentication\1.0.0\contentFiles\any\net6.0\Microsoft.CodeAnalysis.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities.authentication\1.0.0\contentFiles\any\net6.0\Newtonsoft.Json.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.1" />
     <PackageReference Include="Azure.Identity" Version="1.5.0" />
     <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.2.0" />
     <PackageReference Include="Azure.Security.KeyVault.Keys" Version="4.2.0" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.13" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.13" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.4.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.13" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.13" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.13">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="6.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="6.0.13" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0" />
 	<PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.0.0" />
-	<PackageReference Include="Zdk.Utilities.Authentication" Version="0.0.1" />
+	  <PackageReference Include="Zdk.Utilities.Authentication" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +52,10 @@
 
   <ItemGroup>
     <Folder Include="Migrations\Auth\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
