--- a/Zdk.Server.ShoppingLists/Zdk.Server.ShoppingLists.csproj
+++ b/Zdk.Server.ShoppingLists/Zdk.Server.ShoppingLists.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.21.0" />
-	<PackageReference Include="Zdk.Utilities.SignalR" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.21.2" />
+	<PackageReference Include="Zdk.Utilities" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
