--- a/Zdk/Client/Zdk.Client.csproj
+++ b/Zdk/Client/Zdk.Client.csproj
@@ -21,6 +21,9 @@
     <ProjectReference Include="..\Shared\Zdk.Shared.csproj" />
   </ItemGroup>
 
+    <ItemGroup>
+	    <None Include="wwwroot\*" />
+    </ItemGroup>
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
