--- a/Zdk/Server/Zdk.Server.csproj
+++ b/Zdk/Server/Zdk.Server.csproj
@@ -8,6 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities\1.0.0\contentFiles\any\net6.0\BrowserDebugHost.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities\1.0.0\contentFiles\any\net6.0\BrowserDebugHost.runtimeconfig.json" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities\1.0.0\contentFiles\any\net6.0\BrowserDebugProxy.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities\1.0.0\contentFiles\any\net6.0\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities\1.0.0\contentFiles\any\net6.0\Microsoft.CodeAnalysis.dll" />
+    <Content Remove="C:\Users\zdk\.nuget\packages\zdk.utilities\1.0.0\contentFiles\any\net6.0\Newtonsoft.Json.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
     <PackageReference Include="Azure.Identity" Version="1.9.0" />
     <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.5.1" />
